--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -3,6 +3,10 @@ name: Deploy
 run-name: "Deploy from [${{ github.ref_name }}] to [${{ inputs.branch }}]"
 
 on:
+  workflow_run:
+    workflows: [ "End to end tests" ]
+    types: [ completed ]
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       branch:
@@ -32,17 +36,61 @@ on:
         description: 'Which version of BcContainerHelper to use? (latest, preview, private, a specific version number or a direct download URL like https://github.com/freddydk/navcontainerhelper/archive/master.zip). Leave empty to use latest (or preview for preview branches)'
         required: false
         default: ''
+        
+permissions:
+  contents: write
+  actions: read
+
+concurrency:
+  group: 'deploy'
+  cancel-in-progress: true
 
 defaults:
   run:
     shell: pwsh
 
 jobs:
+  Inputs:
+    runs-on: [ ubuntu-latest ]
+    outputs:
+      branch: ${{ steps.CreateInputs.outputs.branch }}
+      copyToMain: ${{ steps.CreateInputs.outputs.copyToMain }}
+      directCommit: ${{ steps.CreateInputs.outputs.directCommit }}
+      requireEndToEndTests: ${{ steps.CreateInputs.outputs.requireEndToEndTests }}
+      createRelease: ${{ steps.CreateInputs.outputs.createRelease }}
+      defaultBcContainerHelperVersion: ${{ steps.CreateInputs.outputs.defaultBcContainerHelperVersion }}
+    steps:
+      - name: Create inputs
+        id: CreateInputs
+        run: |
+          if ($env:GITHUB_EVENT_NAME -eq 'workflow_run') {
+            $branch = 'preview'
+            $copyToMain = 'false'
+            $directCommit = 'false'
+            $requireEndToEndTests = 'true'
+            $createRelease = 'false'
+            $defaultBcContainerHelperVersion = 'preview'
+          } else {
+            $branch = ${{ github.event.inputs.branch }}
+            $copyToMain = ${{ github.event.inputs.copyToMain }}
+            $directCommit = ${{ github.event.inputs.directCommit }}
+            $requireEndToEndTests = ${{ github.event.inputs.requireEndToEndTests }}
+            $createRelease = ${{ github.event.inputs.createRelease }}
+            $defaultBcContainerHelperVersion = ${{ github.event.inputs.defaultBcContainerHelperVersion }}
+          }
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "branch=$branch"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "copyToMain=$copyToMain"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "directCommit=$directCommit"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "requireEndToEndTests=$requireEndToEndTests"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "createRelease=$createRelease"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "defaultBcContainerHelperVersion=$defaultBcContainerHelperVersion"
+
   CheckEndToEnd:
     runs-on: [ ubuntu-latest ]
+    needs: [ Inputs ]
     steps:
       - name: Check successful end 2 end tests have run
-        if: github.repository_owner == 'microsoft' && github.event.inputs.requireEndToEndTests == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.requireEndToEndTests == 'true'
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -62,14 +110,14 @@ jobs:
 
   Deploy:
     runs-on: [ ubuntu-latest ]
-    needs: [ CheckEndToEnd ]
+    needs: [ CheckEndToEnd, Inputs ]
     environment: Production
     steps:
       - name: Validate Deployment
-        if: github.repository_owner == 'microsoft'
+        if: github.repository_owner == 'freddydk'
         env:
           GH_TOKEN: ${{ github.token }}
-          branch: ${{ github.event.inputs.branch }}
+          branch: ${{ needs.Inputs.outputs.branch }}
           runId: ${{ github.run_id }}
         run: |
           $errorActionPreference = "Stop"
@@ -88,10 +136,10 @@ jobs:
 
       - name: Deploy
         env:
-          branch: ${{ github.event.inputs.branch }}
-          copyToMain: ${{ github.event.inputs.copyToMain }}
-          directCommit: ${{ github.event.inputs.directCommit }}
-          defaultBcContainerHelperVersion: ${{ github.event.inputs.defaultBcContainerHelperVersion }}
+          branch: ${{ needs.Inputs.outputs.branch }}
+          copyToMain: ${{ needs.Inputs.outputs.copyToMain }}
+          directCommit: ${{ needs.Inputs.outputs.directCommit }}
+          defaultBcContainerHelperVersion: ${{ needs.Inputs.outputs.defaultBcContainerHelperVersion }}
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           try {
@@ -124,7 +172,7 @@ jobs:
           }
 
       - name: Calculate Release Notes
-        if: github.repository_owner == 'microsoft' && github.event.inputs.createRelease == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.createRelease == 'true'
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           $releaseNotesFile = Join-Path $env:GITHUB_WORKSPACE "RELEASENOTES.md"
@@ -134,14 +182,14 @@ jobs:
           Add-Content -encoding UTF8 -Path $env:GITHUB_ENV -Value "ReleaseNotes=$([Uri]::EscapeDataString($releaseNotes))"
 
       - name: Create release
-        if: github.repository_owner == 'microsoft' && github.event.inputs.createRelease == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.createRelease == 'true'
         uses: actions/github-script@v7
         id: createrelease
         env:
-          branch: ${{ github.event.inputs.branch }}
+          branch: ${{ needs.Inputs.outputs.branch }}
           bodyMD: ${{ env.ReleaseNotes }}
         with:
-          github-token: ${{ secrets.OrgPAT }}
+          github-token: ${{ github.token }}
           script: |
             var bodyMD = process.env.bodyMD
             const createReleaseResponse = await github.rest.repos.createRelease({
