--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -71,12 +71,12 @@ jobs:
             $createRelease = 'false'
             $defaultBcContainerHelperVersion = 'preview'
           } else {
-            $branch = ${{ github.event.inputs.branch }}
-            $copyToMain = ${{ github.event.inputs.copyToMain }}
-            $directCommit = ${{ github.event.inputs.directCommit }}
-            $requireEndToEndTests = ${{ github.event.inputs.requireEndToEndTests }}
-            $createRelease = ${{ github.event.inputs.createRelease }}
-            $defaultBcContainerHelperVersion = ${{ github.event.inputs.defaultBcContainerHelperVersion }}
+            $branch = '${{ github.event.inputs.branch }}'
+            $copyToMain = '${{ github.event.inputs.copyToMain }}'
+            $directCommit = '${{ github.event.inputs.directCommit }}'
+            $requireEndToEndTests = '${{ github.event.inputs.requireEndToEndTests }}'
+            $createRelease = '${{ github.event.inputs.createRelease }}'
+            $defaultBcContainerHelperVersion = '${{ github.event.inputs.defaultBcContainerHelperVersion }}'
           }
           Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "branch=$branch"
           Add-Content -encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "copyToMain=$copyToMain"
