--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -31,7 +31,7 @@ on:
         default: 'preview'
 
 env:
-  TestUpgradesFromVersion: '3.1'
+  TestUpgradesFromVersion: 'v3.1'
 
 defaults:
   run:
@@ -147,7 +147,7 @@ jobs:
           Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "testruns=$testrunsJson"
           Write-Host "testruns=$testrunsJson"
 
-          $releases = @(gh release list --repo microsoft/AL-Go | ForEach-Object { $_.split("`t")[0] }) | Where-Object { [Version]($_.trimStart('v')) -ge [Version]($env:TestUpgradesFromVersion) }
+          $releases = @(gh release list --repo microsoft/AL-Go | ForEach-Object { $_.split("`t")[0] }) | Where-Object { [Version]($_.trimStart('v')) -ge [Version]("$env:TestUpgradesFromVersion".TrimStart('v')) }
           $releasesJson = @{
             "matrix" = @{
               "include" = @($releases | ForEach-Object { @{ "Release" = $_; "type" = 'appSourceApp' }; @{ "Release" = $_; "type" = 'PTE' } } )
