--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -17,6 +17,10 @@ on:
         description: Run the end to end test scenario for the full test matrix
         type: boolean
         default: true
+      includePrivateRepos:
+        description: Include private repos in full test matrix
+        type: boolean
+        default: false
       runScenarios:
         description: Run the end to end scenario tests
         type: boolean
@@ -231,6 +235,7 @@ jobs:
           Write-Host "Repo URL: https://github.com/${{ needs.Check.outputs.githubowner }}/$repoName"
 
       - name: Run tests
+        if: github.event.inputs.includePrivateRepos == true || matrix.visibility == 'public'
         run: |
           try {
             . (Join-Path "." "e2eTests/Test-AL-Go.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.E2EPAT }}' -template ${{ steps.calculateParams.outputs.template }} -adminCenterApiToken ${{ steps.calculateParams.outputs.adminCenterApiCredentials }} -multiProject:('${{ matrix.style }}' -eq 'multiProject') -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -linux:('${{ matrix.os }}' -eq 'linux') -private:('${{ matrix.visibility }}' -eq 'private') -useCompilerFolder:('${{ matrix.Compiler }}' -eq 'CompilerFolder')
